anatom5 Text + Logo #2

--- a/webapp/templates/ueber.html
+++ b/webapp/templates/ueber.html
@@ -84,10 +84,10 @@
     <p>Jedes Projekt hat eine Geschichte. Hier werden all jene Akteure aufgelistet, welche den Weg zum offenen Ratsinformationssystem unterstützt haben.</p>
     <div style="overflow: auto; width: 800px; margin: 2em auto; text-align: left;">
       <div style="width: 260px; float: left;">
-        <img src="/static/img/sponsoring/anatom5.jpg" alt="anatom5" style="border: 0"/>
+        <img src="/static/img/sponsoring/anatom5.png" alt="anatom5" style="border: 0"/>
       </div>
       <div style="width: 450px; float: left; padding: 10px 0px 0px 50px;">
-				Die Agentur <a href="http://www.anatom5.de/">anatom5</a> unterstützt seine Kunden seit 2003 in allen Bereichen der Kommunikation mit Schwerpunkt auf <a href="http://www.anatom5.de/leistungen/barrierefreiheit/barrierefreies-webdesign.html">Barrierefreies Internet</a> (zehn Nominierungen und sechs Auszeichnungen beim BIENE-Award für Barrierefreies Internet). Die Agentur bietet darüber hinaus kombinierte Leistungen, wie Corporate-Design, Print-Publishing, Barrierefreie PDF und Übersetzung von Texten in Leichte Sprache. Für das Projekt "Politik Bei Uns" wurde die Agentur gebeten, ein Logo zu entwickeln. Die Idee: "politik-bei-uns.de bringt Menschen und Orte zusammen".
+				<a href="http://www.anatom5.de/">anatom5</a> bedient alle Bereiche des Kommunikationsdesigns (mit Fokus auf <a href="http://www.anatom5.de/leistungen/barrierefreiheit/barrierefreies-webdesign.html">Barrierefreies Internet</a> – zehn Nominierungen und sechs Auszeichnungen beim BIENE-Award). Dazu zählen kombinierte Leistungen, wie Corporate-Design, Print-Publishing, Barrierefreie PDF und Übersetzung von Texten in Leichte Sprache. anatom5 hat das Politik-bei-uns-Logo entwickelt. Motto: "Wir verbinden Politik, Menschen und Orte".
       </div>
     </div>
     <div style="overflow: auto; width: 800px; margin: 2em auto; text-align: left;">
