--- a/webapp/templates/ueber.html
+++ b/webapp/templates/ueber.html
@@ -33,8 +33,8 @@
   <div style="text-align: center; margin-top: 3em; margin-bottom: 2em">
     <div style="overflow: auto; width: 750px; margin: 0px auto;">
       <div style="float: left; width: 160px; margin: 0 3em;">
-        <div style="height: 82px;"><a href="https://www.facebook.com/OKFNetwork" target="_blank"><img src="/static/img/facebook-f.png" width="71" height="70" alt="Facebook" style="border: 0"/></a></div>
-        <div style="margin-top: 5px;"><a href="https://www.facebook.com/OKFNetwork" target="_blank">Facebook</a></div>
+        <div style="height: 82px;"><a href="https://www.facebook.com/PolitikBeiUns" target="_blank"><img src="/static/img/facebook-f.png" width="71" height="70" alt="Facebook" style="border: 0"/></a></div>
+        <div style="margin-top: 5px;"><a href="https://www.facebook.com/PolitikBeiUns" target="_blank">Facebook</a></div>
       </div>
       <div style="float: left; width: 160px; margin: 0 3em;">
         <div style="height: 82px;"><a href="https://twitter.com/PolitikBeiUns" target="_blank"><img src="/static/img/twitter-bird.png" width="87" height="61" alt="Twitter" style="border: 0"/></a></div>
@@ -46,6 +46,20 @@
       </div>
     </div>
   </div>
+</div>
+<div class="content middle" id="team">
+	<h2 class="top-nomargin">Auszeichnungen für {{ config.site_name }}</h2>
+  <div style="text-align: center; margin-top: 3em; margin-bottom: 2em">
+    <div style="overflow: auto; width: 750px; margin: 2em auto; text-align: left;">
+      <div style="width: 250px; float: left;">
+        <img src="/static/img/awards/deutschland-land-der-ideen-small.jpg" alt="Deutschland: Land der Ideen" style="border: 0"/>
+      </div>
+      <div style="width: 400px; float: left;">
+        Zusammen mit 99 anderen Preisträgern wurde {{ config.site_name }} für das Themenfeld "Stadt, Land, Netz!" als ausgezeichneter Ort im Land der Ideen ausgewählt.<br /><br />
+        Weitere Informationen lassen sich <a href="https://www.land-der-ideen.de/ausgezeichnete-orte/preistraeger/onlineplattform-politik-bei-uns-kommunalpolitik-f-r-dich">auf der Projektseite von Land der Ideen finden</a>.
+      </div>
+    </div>
+	</div>
 </div>
 <div class="content middle" id="team">
   <h2 class="top-nomargin">Das Team hinter {{ config.site_name }}</h2>
