--- a/webapp/templates/file_details.html
+++ b/webapp/templates/file_details.html
@@ -5,7 +5,7 @@
 
 {% block scripts %}
 {{ super() }}
-<script type="text/javascript" src="{{ url_for('static', filename='js/file_details.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/file_details.js') }}?v=0.1.1"></script>
 {% endblock %}
 
 {% block riscontent %}
