--- a/webapp/templates/paper_details.html
+++ b/webapp/templates/paper_details.html
@@ -24,7 +24,7 @@ var ok_document_url = '{{ paper._id }}';
   })();
 </script>
 {% endif %}
-<script type="text/javascript" src="{{ url_for('static', filename='js/paper_details.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/paper_details.js') }}?v=0.1.1"></script>
 {% endblock %}
 
 {% block riscontent %}
