--- a/webapp/templates/admin_bodies.html
+++ b/webapp/templates/admin_bodies.html
@@ -29,7 +29,7 @@
 			<tr>
 				<th>{{ body._id }}</th>
 				<td>{{ body.name }}</td>
-				<td>{{ body.rgs }}</td>
+				<td>{{ body['regionalschlüssel'] }}</td>
 				<td><a href="/admin/body/edit?id={{ body._id }}">edit</a></td>
 			</tr>
 			{% endfor %}
