--- a/webapp/templates/paper_details.html
+++ b/webapp/templates/paper_details.html
@@ -146,7 +146,7 @@ var ok_document_url = '{{ paper._id }}';
     <div class="thumbs">
       <div class="thumbsinner" style="width: {{ twidth }}px; height: 310px;">
         {% for thumbnail in paper.mainFile.thumbnails['300'] %}
-        <img class="thumb" src="{{ generate_file_thumbnail_url(paper.body._id, paper.mainFile._id, 300, loop.index) }}" alt="Vorschau zu {{ paper.mainFile.name }} zum Thema {{ paper.name }}"{% if paper.mainFile.thumbnails['800'][loop.index - 1] %} onload="$(this).data('width800', {{ paper.mainFile.thumbnails['800'][loop.index - 1]['width'] }} );" {% endif %}/>
+        <img class="thumb" src="{{ generate_file_thumbnail_url(paper.body._id, paper.mainFile._id, 300, loop.index) }}" alt="Vorschau zu {{ paper.mainFile.name }} zum Thema {{ paper.name }}" />
         {% endfor %}
       </div>
     </div>
@@ -179,7 +179,7 @@ var ok_document_url = '{{ paper._id }}';
     {% if paper.mainFile.file %}
     <div class="actions">
 			<a href="/file/{{ paper.mainFile._id }}" class="awesome">Details zum Anhang</a> <a href="/file/{{ paper.mainFile._id }}/download" class="awesome">Anhang speichern</a>
-			<span class="typesize">{{ (paper.mainFile.size / 1024)|round(0)|int }} KB PDF
+			<span class="typesize">{{ (paper.mainFile.size / 1024)|round(0)|int }} KB PDF</span>
     </div>
     {% endif %}
   {% endif%}
@@ -212,7 +212,7 @@ var ok_document_url = '{{ paper._id }}';
     <div class="thumbs">
       <div class="thumbsinner" style="width: {{ twidth }}px; height: 310px;">
         {% for thumbnail in file.thumbnails['300'] %}
-        <img class="thumb" src="{{ generate_file_thumbnail_url(paper.body._id, file._id, 300, loop.index) }}" alt="Vorschau zu {{ file.name }} zum Thema {{ paper.name }}"{% if file.thumbnails['800'][loop.index - 1] %} onload="$(this).data('width800', {{ file.thumbnails['800'][loop.index - 1]['width'] }} );" {% endif %}/>
+        <img class="thumb" src="{{ generate_file_thumbnail_url(paper.body._id, file._id, 300, loop.index) }}" alt="Vorschau zu {{ file.name }} zum Thema {{ paper.name }}" />
         {% endfor %}
       </div>
     </div>
