--- a/webapp/templates/layout.html
+++ b/webapp/templates/layout.html
@@ -93,16 +93,16 @@ _gaq.push(['_trackPageview']);
     <li>
       <h4>Informationen</h4>
       <ul>
-        <li><a href="/ueber/">Über uns</a></li>
-        <li><a href="/hilfe/">Hilfe</a></li>
-        <li><a href="/disclaimer/">Haftungsausschluss</a></li>
+        <li><a href="/ueber">Über uns</a></li>
+        <li><a href="/hilfe">Hilfe</a></li>
+        <li><a href="/disclaimer">Haftungsausschluss</a></li>
       </ul>
     </li>
     <li>
       <h4>Für Entwickler</h4>
       <ul>
-        <li><a href="/daten/">Daten</a></li>
-        <li><a href="/api/">API</a></li>
+        <li><a href="/daten">Daten</a></li>
+        <li><a href="/api">API</a></li>
         <li><a href="https://github.com/okfde/">Github</a></li>
       </ul>
     </li>
