--- a/webapp/templates/daten.html
+++ b/webapp/templates/daten.html
@@ -101,12 +101,12 @@
 			<thead>
 				<tr>
 					<th class="data-statistics-text">Stadt</th>
-					<th class="data-statistics-text">Organisationen</th>
-					<th class="data-statistics-text">Personen</th>
-					<th class="data-statistics-text">Sitzungen</th>
-					<th class="data-statistics-text">Tagesordnungspunkte</th>
-					<th class="data-statistics-text">Vorlagen</th>
-					<th class="data-statistics-text">Dateien</th>
+					<th>Organisationen</th>
+					<th>Personen</th>
+					<th>Sitzungen</th>
+					<th>Tagesordnungspunkte</th>
+					<th>Vorlagen</th>
+					<th>Dateien</th>
 				</tr>
 			</thead>
 			<tfoot>
