--- a/webapp/templates/daten.html
+++ b/webapp/templates/daten.html
@@ -9,11 +9,11 @@
 	<h1>Daten</h1>
 	<div class="text">
 		
-		<p>Die Datenbank hinter {{ config.site_host }} steht zum Download zur Verfügung. Bitte beachte, dass wir auch eine <a href="/api/">Programmierschnittstelle (API)</a> anbieten, mit sich Daten <strong>gezielt abfragen</strong> lassen.</p>
+		<p>Die Datenbank hinter {{ config.site_host }} steht zum Download zur Verfügung. Bitte beachte, dass wir auch eine <a href="/api">Programmierschnittstelle (API)</a> anbieten, mit sich Daten <strong>gezielt abfragen</strong> lassen.</p>
 		
 		<p>Bei den Inhalten handelt es sich größtenteils um amtliche Dokumente, die um einige Daten angereichert wurden.</p>
 		
-		<p>Wenn Sie die Daten für eigene Projekte nutzen, freuen wir uns über eine <a href="/impressum/">Nachricht</a> und einen Link zu {{ config.site_host }}!</p>
+		<p>Wenn Sie die Daten für eigene Projekte nutzen, freuen wir uns über eine <a href="/impressum">Nachricht</a> und einen Link zu {{ config.site_host }}!</p>
 
 	</div>
 </div>
