--- a/webapp/templates/hilfe.html
+++ b/webapp/templates/hilfe.html
@@ -32,7 +32,7 @@
 			<img src="/static/img/ueber/ueber-suche.jpg" width="250" height="250" alt="Screenshot" style="border: 1px solid #fff" />
 		</div>
 		<div style="float: right; width: 310px;">
-			<p><b>Flexible Suchfunktionen</b>: Über das untere Suchfeld der Startseite können Sie nach allen Wörtern suchen, die in den Dokumenten vorkommen. Sie können das Suchergebnis auch auf bestimmte Gremien, wie z.B. die Bezirksvertretung Ihres Bezirks, oder nach Arten von Dokumenten beschränken. Es kann außerdem nach Satzteilen gesucht werden: Diese setzen Sie bitte in Anführungszeichen, also z.B. "Anlage Verwaltungsrat". <a href="/suche/">Ausprobieren</a></p>
+			<p><b>Flexible Suchfunktionen</b>: Über das untere Suchfeld der Startseite können Sie nach allen Wörtern suchen, die in den Dokumenten vorkommen. Sie können das Suchergebnis auch auf bestimmte Gremien, wie z.B. die Bezirksvertretung Ihres Bezirks, oder nach Arten von Dokumenten beschränken. Es kann außerdem nach Satzteilen gesucht werden: Diese setzen Sie bitte in Anführungszeichen, also z.B. "Anlage Verwaltungsrat". <a href="/suche">Ausprobieren</a></p>
 		</div>
 	</div>
 </div>
@@ -42,7 +42,7 @@
 			<img src="/static/img/ueber/ueber-anlagenvorschau.jpg" width="250" height="250" alt="Screenshot" style="border: 1px solid #fff" />
 		</div>
 		<div style="float: left; width: 310px;">
-			<p><b>Anlagen-Vorschau</b>: Sie können Anlagen zu Dokumenten, bevor Sie diese zur detaillierten Einsicht herunter laden, in einer schnellen Voransicht ansehen. Damit können Sie schnell einen Eindruck bekommen, um welche Art von Dokument es sich handelt: Antragstext, Bericht, Präsentation etc. Damit fällt die Entscheidung, welches Dokument einen näheren Blick wert ist, leichter. <a href="/suche/">Ausprobieren</a></p>
+			<p><b>Anlagen-Vorschau</b>: Sie können Anlagen zu Dokumenten, bevor Sie diese zur detaillierten Einsicht herunter laden, in einer schnellen Voransicht ansehen. Damit können Sie schnell einen Eindruck bekommen, um welche Art von Dokument es sich handelt: Antragstext, Bericht, Präsentation etc. Damit fällt die Entscheidung, welches Dokument einen näheren Blick wert ist, leichter. <a href="/suche">Ausprobieren</a></p>
 		</div>
 	</div>
 </div>
@@ -72,7 +72,7 @@
 			<img src="/static/img/ueber/ueber-api.jpg" width="250" height="250" alt="Screenshot" style="border: 1px solid #fff" />
 		</div>
 		<div style="float: right; width: 310px;">
-			<p><b>API</b>: Unsere Daten sind nicht nur als Download verfügbar. Wir haben auch eine auf dem Standard OParl basierte API, also eine Schnittstelle zum gezielten Abruf bestimmter Daten mit Hilfe von Software. <a href="/api/">Mehr erfahren</a></p>
+			<p><b>API</b>: Unsere Daten sind nicht nur als Download verfügbar. Wir haben auch eine auf dem Standard OParl basierte API, also eine Schnittstelle zum gezielten Abruf bestimmter Daten mit Hilfe von Software. <a href="/api">Mehr erfahren</a></p>
 		</div>
 	</div>
 </div>
