--- a/webapp/templates/ueber.html
+++ b/webapp/templates/ueber.html
@@ -24,7 +24,7 @@
   <h2 class="top-nomargin">Wünsche äußern & weitere Städte</h2>
   <div style="text-align: center; margin: 3em 5em;">
     <p>Wir haben eine Seite eigens zu dem Zweck, damit Sie Anregungen und Verbesserungsvorschläge öffentlich äußern können. Sie können außerdem Vorschläge von anderen sehen, bewerten und kommentieren. Die Vorschläge werden auch hier einfließen.</p>
-    <p>Sie können dort ebenso Städte vorschlagen, welche Sie hier veröffentlicht sehen möchten. Bitte beachten Sie dabei aber, dass eine neue Stadt viel Arbeit bedeutet. Wenn Sie programmieren können und / oder finanzielle Ressourcen haben, wird das vieles vereinfachen. <a href="/impressum/">Kontaktieren Sie uns dazu gerne direkt!</a></p>
+    <p>Sie können dort ebenso Städte vorschlagen, welche Sie hier veröffentlicht sehen möchten. Bitte beachten Sie dabei aber, dass eine neue Stadt viel Arbeit bedeutet. Wenn Sie programmieren können und / oder finanzielle Ressourcen haben, wird das vieles vereinfachen. <a href="/impressum">Kontaktieren Sie uns dazu gerne direkt!</a></p>
     <p><a class="awesome large" href="http://politik-bei-uns.uservoice.com/" target="_blank">Ideen ansehen und hinzufügen &nbsp; &rarr;</a></p>
   </div>
 </div>
