--- a/webapp/templates/layout.html
+++ b/webapp/templates/layout.html
@@ -82,7 +82,7 @@ _gaq.push(['_trackPageview']);
   <ul id="footer-icons">
     <li><a href="https://twitter.com/politikbeiuns"><img src="/static/img/footer/twitter.png" alt="Twitter" /></a></li>
     <li><a href="https://www.facebook.com/OKFNetwork"><img src="/static/img/footer/facebook.png" alt="Facebook" /></a></li>
-    <li><a href="mailto:info@politik-bei-uns.de"><img src="/static/img/footer/mail.png" alt="E-Mail" /></a></li>
+    <li><a href="mailto:kontakt@politik-bei-uns.de"><img src="/static/img/footer/mail.png" alt="E-Mail" /></a></li>
     {% block footericons %}{% endblock %}
   </ul>
   <ul id="footer-menu">
