--- a/webapp/templates/impressum.html
+++ b/webapp/templates/impressum.html
@@ -9,8 +9,8 @@
 
 	<p><strong>Anbieter im Sinne des § 5 Telemediengesetzes</strong><br />
 	Open Knowledge Foundation Deutschland e.V.<br />
-	Schlesische Str. 6<br />
-	10997 Berlin</p>
+	Singerstraße 109<br />
+	10179 Berlin</p>
 	
 	<p><strong>Kontakt</strong><br />
 	E-Mail: <a href="mailto:{{ config.contact_mail }}">{{ config.contact_mail }}</a><br />
